added film posters
